--- a/RobertoMenegais.cbp
+++ b/RobertoMenegais.cbp
@@ -77,15 +77,17 @@
 		</Compiler>
 		<Unit filename="include/definitions.h" />
 		<Unit filename="include/mpc_c.h" />
-		<Unit filename="src/basic.cpp" />
-		<Unit filename="src/basic.h" />
 		<Unit filename="src/bus.cpp" />
 		<Unit filename="src/bus.h" />
+		<Unit filename="src/controller.cpp" />
+		<Unit filename="src/controller.h" />
 		<Unit filename="src/helpers.cpp" />
 		<Unit filename="src/helpers.h" />
 		<Unit filename="src/listBox.cpp" />
 		<Unit filename="src/listBox.h" />
 		<Unit filename="src/main.cpp" />
+		<Unit filename="src/mpc_callbacks.cpp" />
+		<Unit filename="src/mpc_callbacks.h" />
 		<Unit filename="src/schedule.cpp" />
 		<Unit filename="src/schedule.h" />
 		<Unit filename="src/seat.cpp" />
